pkg/ibmvpc/examples/out/explain_out/tgwDisabledDenyPrefix_all_vpcs_explain_detail.txt
Explaining connectivity from ky-vsi1-subnet20 to ky-vsi0-subnet0
Interpreted source: test-vpc2-ky/ky-vsi1-subnet20[10.240.128.5]
Interpreted destination: test-vpc0-ky/ky-vsi0-subnet0[10.240.0.5]
================================================================

No connections from test-vpc2-ky/ky-vsi1-subnet20[10.240.128.5] to test-vpc0-ky/ky-vsi0-subnet0[10.240.0.5];
All connections will be blocked since transit gateway denies route from source to destination

Egress: security group sg21-ky allows connection; network ACL acl21-ky allows connection
cross-vpc-connection: transit-connection tg_connection0 of transit-gateway local-tg-ky denies connection
Ingress: network ACL acl1-ky allows connection; security group sg1-ky allows connection

Path:
	ky-vsi1-subnet20[10.240.128.5] -> security group sg21-ky -> network ACL acl21-ky -> subnet20 -> 
	test-vpc2-ky -> | TGW local-tg-ky |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg21-ky allows connection with the following allow rules
			index: 1, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl21-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	transit gateway local-tg-ky blocks connection via transit connection tg_connection0 with the following prefix filter
		index: 1, action: deny, ge: 22, le: 23, prefix: 10.240.0.0/21

	Ingress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg1-ky allows connection with the following allow rules
			index: 0, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
